web/styles/message_row.css
/* ... */
/* Only show links on the trailing bookend. */
.bookend-channel-settings-link {
    display: none;
}

.trailing_bookend .bookend-channel-settings-link {
    display: inline;
}

#report-message-preview-container {
    /* Hide most UI for interacting with a message in the report message preview UI. */
    .add-task-bar,
    .change_visibility_policy,
    .recipient-row-topic-menu,
    .todo-edit-task-list-title,
    .message_controls,
    .message-reminders,
    .message_reactions {
        display: none;
    }
}

@container message-lists (width < $cq_ml_min) {
    .muted-message-notice {
        display: none;
    }
}

/* Fallback for hiding the muted message notice. */
@media (width < $ml_min) {
    .without-container-query-support {
        .muted-message-notice {
            display: none;
        }
    }
}

.not-subscribed-banner {
    .banner-content {
        align-items: center;
    }

    .zulip-icon.zulip-icon-globe {
        font-size: 0.8571em; /* 12px at 14px/1em */
        vertical-align: -0.0714em; /* -1px at 14px/1em */
    }

    .zulip-icon.zulip-icon-lock {
        font-size: 0.9286em; /* 13px at 14px/1em */
        vertical-align: -0.0714em; /* -1px at 14px/1em */
    }

    .zulip-icon.zulip-icon-hashtag {
        font-size: 0.9286em; /* 13px at 14px/1em */
        vertical-align: -0.1429em; /* -2px at 14px/1em */
    }
}

.message_link_tooltip {
    max-height: 200px;
    max-width: min(600px, 70vw);
    overflow: hidden;

    .messagebox-content {
        display: grid;
        align-items: center;
        grid-template:
            minmax(var(--message-box-sender-line-height), auto) 1fr /
            var(--message-box-avatar-column-width) minmax(0, 1fr);
        grid-template-areas:
            "avatar sender "
            "avatar message";

        &.is-me-message {
            grid-template-areas:
                ".      .     "
                "avatar sender"
                "avatar sender";
            grid-template-rows:
                var(--message-box-vertical-margin) var(
                    --message-box-avatar-height
                )
                minmax(0, auto);
        }

        .message-avatar {
            grid-area: avatar;
        }

        .message_sender {
            grid-area: sender;
        }

        .message_content:not(.status-message) {
            grid-area: message;
            color: var(--color-text-message-default);

            & > p,
            & > ul,
            & > ol {
                display: -webkit-box;
                -webkit-box-orient: vertical;
                -webkit-line-clamp: 3;
                /* stylelint-disable-next-line property-no-deprecated */
                -webkit-box-align: start;
                overflow: hidden;
                overflow-wrap: break-word;
                white-space: normal;
            }
        }
    }

    code {
        color: var(--color-text-default);
        background-color: var(--color-background-disabled);
        border-radius: 3px;
        padding: 0 2px;
    }

    .codehilite pre {
        color: light-dark(hsl(0deg 0% 87%), hsl(0deg 0% 87%));
        background-color: light-dark(
            hsl(0deg 0% 70% / 4%),
            hsl(0deg 0% 100% / 4%)
        );
    }
}

